--- a/style.css
+++ b/style.css
@@ -52,6 +52,14 @@ button {
     background-color: rgb(0, 0, 0);
     color: #fff;
 }
+
+.imagen-jugador {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 .derechos-de-autor {
     font-size: 15px;
     color: #aeaeae;
