--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
 }
 body{
     background-image: url('imagenes/fondo.jpg');
+    background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        height: 100vh;
+        margin: 0;
 }
 .tateti{
     margin-top: 1rem;
@@ -24,7 +30,7 @@ body{
 #tabla1 td {
     width: 7rem;
     height: 7rem;
-    border: 2px solid rgb(74, 255, 33);
+    border: 3px inset rgb(125, 1, 86);
     text-align: center;
     font-size: 3rem;
     cursor: pointer;
@@ -49,7 +55,8 @@ body{
 button {
     margin-top: 1.4rem;
     padding: 0.3rem;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(8, 15, 91);
+    border-radius: 10px;
     color: #fff;
 }
 
@@ -61,7 +68,10 @@ button {
 }
 
 .derechos-de-autor {
+    position: fixed;
+        bottom: 15px;
     font-size: 15px;
     color: #aeaeae;
     padding: 20px;
+
 }
